# appel-book-exercises

./: README.md  dune-project
ch1_ex2/: dune  main.ml
json_parser/: README.md  dune  json.ml  lexer.mll  main.ml  parser.mly  test1.json
lib/: dune  en.mli
tiger_lexer/: README.md  dune  lexer.mll  main.ml  queens.tig  simple.tig  syntax.ml
tiger_lexer/book_code/: tiger.lex
xml_parser/: README.md  ast.ml  ast123.ml  dune  lexer_expected.txt  main.ml  parser.mly  test1.xml
